src/sass/Search.scss
.mobile-search {
  height: 0;
  z-index: 2;
  position: absolute;
  left: 0;
  right: 0;
  background: white;
  overflow-y: hidden;
  box-sizing: border-box;
  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
  border-bottom: 1px solid $col-border;
  &.open {
    height: 287px;
  }
  .wrap {
    padding: 15px;
  }
}

.search {
  height: 216px;
  display: flex;
  flex-direction: column;
  line-height: 46px;
  font-size: 24px;
  .date-wrap {
    display: flex;
    flex: 1 200%;
    flex-direction: column;
    & input {
      cursor: pointer !important;
    }
  }
  .filter svg {
    display: none !important
  }
}

.filter {
  flex: 1 100%;
  display: flex;
  position: relative;
  input {
    @extend .dots;
    padding-left: 30px !important;
    box-sizing: border-box !important;
  }
  .material-icons {
    position: absolute !important;
    font-size: 24px !important;
    line-height: 46px;
  }
  .input {
    position: absolute;
    left: 0;
    right: 0;
    & div {
      @extend .dots;
      width: 100%;
      box-sizing: border-box;
    }
  }
  &.appbar {
    line-height: 100px;
    input {
      padding-right: 30px !important;
    }
    .material-icons {
      line-height: 68px;
      cursor: pointer;
    }
    .right-btn {
      position: absolute;
      right: 0;
      width: 24px;
      height: 64px;
      flex-direction: column;
    }
  }
}

.menu-toggle {
  text-transform: uppercase !important;
  padding: 8px 0 6px !important;
  font-weight: 900 !important;
}

@media screen and (min-width: $tablet-min) {
  .search {
    padding: 30px 20px;
    max-width: 529px;
    margin: 0 auto;
    .date-wrap {
      flex-direction: row;
      flex: 1 100%;
    }
  }
}

@media screen and (min-width: $desktop-min) {
  .search {
    padding: 30px 80px;
    flex-direction: row;
    height: 110px;
    max-width: 1280px;
    margin: 0 auto;
    box-sizing: border-box;
  }
}

